test/server/admin/admin_test.yaml
admin:
  access_log:
  - name: envoy.access_loggers.file
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
      path: "/dev/null"
  address:
    socket_address:
      address: "::"
      port_value: 8080

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: "::"
        port_value: 0
    filter_chains:
    - filters:
      - name: http
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {host_rewrite_literal: 127.0.0.1, cluster: service_1}
  clusters:
  clusters:
  - name: service_1
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: "v6_only"
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_100
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: {socket_address: {address: 127.0.0.1, port_value: 443}}

#  virtual_hosts:
#    - name: local
#      domains: ["*"]
#      routes:
#        - match:
#             prefix: "/admin_test.html"
#          direct_response:
#            status: 200
#            body:
#              filename: "/test/server/admin/admin_test.html"
#        - match:
#             prefix: "/admin_test.js"
#          direct_response:
#            status: 200
#            body:
#              filename: "/test/server/admin/admin_test.js"
